<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                app:cardPreventCornerOverlap="false"

                app:cardElevation="10dp"
                android:minHeight="130dp"
                android:layout_alignParentTop="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    tools:ignore="UselessParent">

                    <com.joooonho.SelectableRoundedImageView
                        android:layout_width="120dp"
                        android:padding="0dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo"
                        app:sriv_border_color="@color/colorPrimary"
                        android:id="@+id/user_pic"
                        android:onClick="uploadimage"
                        app:sriv_border_width="2dp"
                        app:sriv_oval="true" />

                    <TextView
                        android:id="@+id/welcome_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_toRightOf="@id/user_pic"
                        android:text="Welcome !"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/login_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:onClick="try_to_login"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_toRightOf="@id/welcome_user"
                        android:text="LOGIN"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />



                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="130dp"
                       android:layout_marginTop="60dp"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/dont"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="5dp"
                           android:layout_marginTop="5dp"
                           android:text="Don't have an Account?"
                           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                           android:textColor="#000"
                           android:textSize="13sp"
                           android:textStyle="bold"
                           android:layout_marginLeft="5dp" />
                    <TextView
                        android:id="@+id/register_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="5dp"
                        android:text="REGISTER"
                        android:textSize="14sp"
                        android:onClick="try_to_register"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />
                   </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="@dimen/settings_header_padding"
                android:text="@string/notifications"
                android:textStyle="bold"
                android:layout_marginLeft="5dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:padding="@dimen/settings_padding"
                android:onClick="get_notified"
                android:text="@string/notifications" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:padding="@dimen/settings_padding"
                android:text="@string/news_and_updates" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="@dimen/settings_header_padding"
                android:text="@string/general"
                android:textStyle="bold"
                android:layout_marginLeft="5dp" />


            <TextView
                android:id="@+id/about"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="about"
                android:text="@string/about" />


            <TextView
                android:id="@+id/terms"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dark_cover"
                android:text="Enter Dark Mode" />


            <TextView
                android:id="@+id/edit_profile"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editprofile"
                android:text="Edit Profile" />

            <TextView
                android:id="@+id/rate"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rateus"
                android:text="@string/rate_app" />

            <TextView
                android:id="@+id/feedback"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="send_feed_back"
                android:text="@string/send_feedback" />

            <TextView
                android:id="@+id/exit"
                style="@style/SettingsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="logout"
                android:text="@string/logout" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>